--- a/src/assets/styles/variables.sass
+++ b/src/assets/styles/variables.sass
@@ -3,3 +3,4 @@ $background_color: white;
 $notification_error_color: #e00d0d;
 $notification_success_color: #80d617;
 $btn_color: #ffdb4d;
+$footer_color: gainsboro;
