--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -9,19 +9,50 @@
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   background-color: $background_color;
+  display: flex;
+  flex-direction: column;
+}
+
+html, body {
+  height: 100%;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+    flex: 1 0 auto;
 
     > .container__header {
-        height: 65px;
+        height: 55px;
         width: 100%;
         background-color: $main_color;
+
+        .header__text {
+          margin: 0 auto;
+          width: 900px;
+          font-size: 23px;
+          font-weight: 600;
+          color: goldenrod;
+          padding-top: 13px;
+        }
     }
 
     > .container__main-content {
+      &.report {
+        &:before {
+            content: ' ';
+            left: 0;
+            top: 60px;
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 533px;
+            opacity: 0.55;
+            z-index: 2;
+            background-color: white;
+        }
+      }
+    }
+
+    > .container__main-content, .container__report {
        max-width: 1060px;
        width: 1060px;       
        margin: 30px auto;
@@ -42,11 +73,16 @@ body {
          @include border_light();
        }
     }
+}
 
-    > .container__footer {
-       height: 80px;
-       position: absolute;
-       bottom: 0;
-       background-color: gold;
-    }
+.footer {
+  > .footer__container {
+        background-color: $footer_color;
+        text-align: center;
+        padding: 9px;
+        
+        .text {
+          color: grey;
+        }
+  }
 }
