--- a/src/components/answers/answers.scss
+++ b/src/components/answers/answers.scss
@@ -24,6 +24,7 @@
         padding: 0;
         height: 310px;
         overflow-y: auto;
+        max-width: 495px;
 
         .list__item {
             padding: 11px;
